# ent-python

./: .gitignore  LICENSE  README.md  docker-compose.gremlin.yml  docker-compose.pgvector.yml  pyproject.toml
docs/: ARCHITECTURE.md  QUICKSTART.md
entpy/: __init__.py
entpy/active/: __init__.py  bind.py  bound_update.py  context.py  entity.py  gremlin.py  queryset.py  schema.py
entpy/cli/: main.py
entpy/codegen/: __init__.py  stubgen.py  thin.py
entpy/dialect/: __init__.py  driver.py
entpy/entql/: __init__.py  filter.py
entpy/ir/: __init__.py  descriptor.py  graph.py  loader.py  policies.py
entpy/observer/: __init__.py  base.py  discovery.py  hooks.py  integration.py  registry.py
entpy/privacy/: __init__.py  policy.py
entpy/runtime/: __init__.py  async_client.py  builders.py  builders_async.py  client.py  connect.py  driver_util.py  entity.py  errors.py  hook.py  interceptor.py  mutation.py  predicate.py  query_exec.py  query_helpers.py  registry.py  session_scope.py  spec_helpers.py  traverse.py  traverse_core.py  traverse_exec.py  validation.py
entpy/schema/: __init__.py  base.py  edge.py  field.py  index.py  mixin.py  search.py
entpy/search/: __init__.py  builder.py  embed_provider.py  embedder.py  hybrid.py  registry.py  reindex.py  semantic.py
examples/demos/: README.md  __init__.py  search_schemas.py  search_seed.py
examples/rag/: schemas.py
tests/: conftest.py  test_bugs.py  test_expert_bugs.py  test_followup_issues.py  test_large_refactors.py  test_observer.py  test_perf_quality.py  test_privacy.py  test_schema.py
(+105 files in other folders)
