[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entpy"
version = "0.1.0"
description = "Runtime-first entity framework for Python (ent port)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "aiosqlite>=0.19",
    "greenlet>=3.0",
    "asyncpg>=0.29",
]
search = [
    "pgvector>=0.2",
    "opensearch-py>=2.4",
]
codegen = [
    "jinja2>=3.1",
]
async = [
    "aiosqlite>=0.19",
    "greenlet>=3.0",
]
gremlin = [
    "gremlinpython>=3.7",
]

[project.scripts]
entpy = "entpy.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["entpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (postgres/pgvector)",
    "gremlin: requires gremlin-server on localhost:8182",
]

[tool.mypy]
python_version = "3.11"
packages = ["entpy"]
ignore_missing_imports = true
